fix textfields growing out of containers

--- a/src/components/text-field/shared.module.css
+++ b/src/components/text-field/shared.module.css
@@ -61,6 +61,8 @@
 	display: inline-flex;
 	min-width: 0;
 	flex-grow: 1;
+	position: relative;
+	align-items: center;
 }
 
 .textArea {
